--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <button onclick="location.href='register'" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="signup-button">Sign-Up</button><br>
             
             <br><br><br><br>
-            <a href="menu" id="continueAsGuest" style="color:#ffffff;">Continue as guest?</a>
+            <a href="/menu?guest=true" id="continueAsGuest" style="color:#ffffff;">Continue as guest?</a>
             </br>
 
             <script>
