--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
     </a>
 
     <!-- about -->
-     <div id="about">
+     <div>
     <div class="jumbotron jumbotron-fluid feature" id="feature-first">
-        <div class="container my-5" id="about">
+        <div class="container my-5" >
             <div class="row justify-content-between text-center text-md-left" id="about">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
-                    <h2 class="font-weight-bold" style="color: white;">ABOUT US</h2>
+                    <h2 class="font-weight-bold" id="about"style="color: white;">ABOUT US</h2>
                     <p class="my-4" style="color: white;"> Welcome to LabSpot! <br><br>
                         Our mission is to provide a seamless and efficient way for students, 
                         educators, and professionals to reserve their spot in our state-of-the-art 
@@ -197,16 +197,19 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold" style="color: white;" >Why Choose Us?</h2>
+                    <h2 class="font-weight-bold" style="color: white;" >NPMs used</h2>
                     <p class="my-4" style="color: white;">
-                        We understand the importance of having a reliable and accessible 
-                        workspace for your academic and professional needs. That's why we've 
-                        created a booking system that prioritizes your convenience and 
-                        productivity. By streamlining the reservation process, we aim to 
-                        reduce the hassle and let you focus on what matters most – your work.
-                        <br><br>
-                        Join our community of dedicated users and take advantage of everything 
-                        our computer labs have to offer.
+                        •express <br>
+                        •express-session<br>
+                        •cookie-parser<br>
+                        •bcrypt<br>
+                        •connect-mongo <br>
+                        •mongoose<br>
+                        •mongodb<br>
+                        •file-upload<br>
+                        •path<br>
+                        •body-parser <br>
+                        •hbs
                     </p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-green" >Learn More</a>
                 </div>
